--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,15 @@ html{
     text-align: center;
     margin-bottom: 15px;
   }
+  .last-message{
+    display: block;
+    max-width: 1000px;
+    font-size: 1rem;
+    line-height: 30px;
+
+    text-align: center;
+    margin: 100px 5% 0;
+  }
   .wrapper {
     display: grid;
     grid-template-columns: repeat(4, 245px);
