--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,12 @@ html {
   margin-bottom: 15px;
 }
 
+@media screen and (max-width: 449px) {
+  .photo-content p {
+    font-size: 12px;
+  }
+}
+
 .photo-content .last-message {
   display: block;
   max-width: 1000px;
@@ -91,6 +97,12 @@ html {
   line-height: 30px;
   text-align: center;
   margin: 100px 5% 0;
+}
+
+@media screen and (max-width: 449px) {
+  .photo-content .last-message {
+    font-size: 12px;
+  }
 }
 
 .photo-content .wrapper {
