--- a/style.scss
+++ b/style.scss
@@ -64,6 +64,9 @@ html{
   p{
     text-align: center;
     margin-bottom: 15px;
+    @media screen and (max-width: 449px){
+      font-size: 12px;
+    }
   }
   .last-message{
     display: block;
@@ -73,6 +76,9 @@ html{
 
     text-align: center;
     margin: 100px 5% 0;
+    @media screen and (max-width: 449px){
+      font-size: 12px;
+    }
   }
   .wrapper {
     display: grid;
